@@ -1,3 +1,9 @@
+2010-06-07 13:37  paddockd
+
+	* [r164] ChangeLog, src/slimaudio/slimaudio_buffer.c,
+	  src/squeezeslave/squeezeslave.c: Reapplied r157 datarace fixes.
+	  Increased version to 164.
+
 2010-06-04 12:39  paddockd
 
 	* [r163] ChangeLog, TODO, src/slimaudio/slimaudio_buffer.c,
